[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/UI/InGamePause.gd" type="Script" id=1]
[ext_resource path="res://Assets/Born2bSportyV2.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 102
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.807843 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.262745, 0.235294, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/separation = 65
alignment = 1

[node name="TitleContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 1280.0
margin_bottom = 205.0
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TitleContainer"]
margin_left = 527.0
margin_right = 752.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
text = "Pause"
align = 1
valign = 1

[node name="GeneratorControls" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 1280.0
margin_bottom = 618.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GeneratorControls"]
margin_left = 392.0
margin_right = 887.0
margin_bottom = 348.0
size_flags_horizontal = 2
custom_constants/separation = 25
alignment = 1

[node name="SeedLabel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer"]
margin_right = 495.0
margin_bottom = 135.0
rect_min_size = Vector2( 495, 0 )
custom_constants/separation = 15

[node name="Marker" type="Label" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer/SeedLabel"]
margin_right = 495.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 2 )
text = "Seed:"
align = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer/SeedLabel"]
margin_top = 75.0
margin_right = 495.0
margin_bottom = 135.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )

[node name="CenterContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer"]
margin_top = 160.0
margin_right = 495.0
margin_bottom = 348.0

[node name="ContinueButton" type="MarginContainer" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer/CenterContainer"]
margin_right = 495.0
margin_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 0

[node name="ContinueButton" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer/CenterContainer/ContinueButton"]
margin_right = 495.0
margin_bottom = 60.0
rect_min_size = Vector2( 495, 0 )
custom_constants/separation = 5

[node name="Marker" type="Label" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer/CenterContainer/ContinueButton/ContinueButton"]
margin_right = 30.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer/CenterContainer/ContinueButton/ContinueButton"]
margin_left = 35.0
margin_right = 221.0
margin_bottom = 60.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/font = SubResource( 2 )
text = "Continue"

[node name="ReturnToMenuButton" type="MarginContainer" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer/CenterContainer"]
margin_top = 64.0
margin_right = 495.0
margin_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 495, 0 )
size_flags_horizontal = 4

[node name="ReturnToMenuButton" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer/CenterContainer/ReturnToMenuButton"]
margin_right = 495.0
margin_bottom = 60.0
custom_constants/separation = 5

[node name="Marker" type="Label" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer/CenterContainer/ReturnToMenuButton/ReturnToMenuButton"]
margin_right = 30.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer/CenterContainer/ReturnToMenuButton/ReturnToMenuButton"]
margin_left = 35.0
margin_right = 495.0
margin_bottom = 60.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/font = SubResource( 2 )
text = "Return to Main menu"

[node name="ReturnToDesktopButton" type="MarginContainer" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer/CenterContainer"]
margin_top = 128.0
margin_right = 495.0
margin_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 495, 0 )
size_flags_horizontal = 4

[node name="ReturnToDesktopButton" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer/CenterContainer/ReturnToDesktopButton"]
margin_right = 495.0
margin_bottom = 60.0
custom_constants/separation = 5

[node name="Marker" type="Label" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer/CenterContainer/ReturnToDesktopButton/ReturnToDesktopButton"]
margin_right = 30.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer/CenterContainer/ReturnToDesktopButton/ReturnToDesktopButton"]
margin_left = 35.0
margin_right = 442.0
margin_bottom = 60.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/font = SubResource( 2 )
text = "Return to desktop"
